--- a/index.html
+++ b/index.html
@@ -31,30 +31,14 @@
 
   <main>
     <!-- HERO -->
-    <section class="hero">
-      <div class="hero-content">
-        <h1 class="hero-title">
-          The football oracle for<br />
-          Web3 builders.
-        </h1>
-        <p class="hero-sub">
-          ScoreFeed publishes verified Premier League &amp; La Liga match
-          results directly on BNB Chain.
-        </p>
-        <p class="hero-sub">
-          Clean, structured football data for prediction markets, betting dApps
-          and AI agents.
-        </p>
-
-        <div class="hero-actions">
-          <a href="app.html" class="btn primary">Open app</a>
-          <a href="#devs" class="btn secondary">For developers</a>
+ <div class="hero-actions">
+            <a href="app.html" class="btn btn-primary">Open app</a>
+            <a href="#devs" class="btn btn-secondary">For developers</a>
         </div>
 
         <p class="hero-tagline">
-          Humans watch the match. Smart contracts read ScoreFeed.
+            Humans watch the match. Smart contracts read ScoreFeed.
         </p>
-      </div>
 
       <!-- LIVE SCOREBOARD PANEL -->
       <aside class="hero-panel">
