--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
   <div class="scanlines"></div>
 
   <header class="site-header">
-    <div class="logo">
-        <span class="logo-mark">SF</span>
-        <span class="logo-text">ScoreFeed</span>
-    </div>
+  <div class="logo">
+    <span class="logo-text">ScoreFeed<span class="logo-io">.io</span></span>
+  </div>
 
-    <nav class="nav">
-        <a href="#about">About</a>
-        <a href="#how">How it works</a>
-        <a href="#leagues">Leagues</a>
-        <a href="#devs">For devs</a>
-        <a href="#roadmap">Roadmap</a>
-        <a href="app.html" class="nav-cta">Open app</a>
-    </nav>
+  <nav class="nav">
+    <a href="#about">About</a>
+    <a href="#how">How it works</a>
+    <a href="#leagues">Leagues</a>
+    <a href="#devs">For devs</a>
+    <a href="#roadmap">Roadmap</a>
+    <a href="app.html" class="nav-cta">Open app</a>
+  </nav>
 </header>
 
   <main>
