--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
   <header class="site-header">
   <div class="logo">
-    <span class="logo-text">ScoreFeed<span class="logo-io">.io</span></span>
-  </div>
+    <span class="logo-main">ScoreFeed</span><span class="logo-dot">.io</span>
+</div>
 
   <nav class="nav">
     <a href="#about">About</a>
