--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
 
   <header class="site-header">
   <div class="logo">
-    <span class="logo-main">ScoreFeed</span><span class="logo-dot">.io</span>
-</div>
+    <span class="logo-text">ScoreFeed<span class="logo-dot">.io</span></span>
+  </div>
+
+  <!-- Pulsante hamburger (mobile) -->
+  <button class="nav-toggle" aria-label="Toggle navigation">
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
 
   <nav class="nav">
     <a href="#about">About</a>
