--- a/index.html
+++ b/index.html
@@ -294,9 +294,18 @@
   const nav = document.querySelector('.nav');
 
   if (navToggle && nav) {
+    // apre/chiude con il bottone
     navToggle.addEventListener('click', () => {
       nav.classList.toggle('nav-open');
-      navToggle.classList.toggle('nav-toggle-open');
+      navToggle.classList.toggle('nav-toggle--open');
+    });
+
+    // chiude automaticamente quando clicchi un link del menu
+    nav.addEventListener('click', (event) => {
+      if (event.target.tagName.toLowerCase() === 'a') {
+        nav.classList.remove('nav-open');
+        navToggle.classList.remove('nav-toggle--open');
+      }
     });
   }
 </script>
