--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     <a href="#leagues">Leagues</a>
     <a href="#devs">For devs</a>
     <a href="#roadmap">Roadmap</a>
-    <a href="app.html" class="nav-cta">Open app</a>
+    <a href="app.html" class="nav-cta">
+  <span class="nav-cta-icon"></span>
+  Open app
+</a>
   </nav>
 </header>
 
