--- a/index.html
+++ b/index.html
@@ -25,17 +25,16 @@
     <span></span>
   </button>
 
-  <nav class="nav">
-    <a href="#about">About</a>
-    <a href="#how">How it works</a>
-    <a href="#leagues">Leagues</a>
-    <a href="#devs">For devs</a>
-    <a href="#roadmap">Roadmap</a>
-    <a href="app.html" class="nav-cta">
-  Open app
-</a>
-</a>
-  </nav>
+ <nav class="nav">
+  <a href="#about">About</a>
+  <a href="#how-it-works">How it works</a>
+  <a href="#leagues">Leagues</a>
+  <a href="#for-devs">For devs</a>
+  <a href="#roadmap">Roadmap</a>
+
+  <!-- CTA desktop con stile del bottone hero -->
+  <a href="app.html" class="btn btn-primary nav-cta">Open app</a>
+</nav>
 </header>
 
   <main>
