--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
   <a href="#leagues">Leagues</a>
   <a href="#for-devs">For devs</a>
   <a href="#roadmap">Roadmap</a>
+  <a href="app.html" class="nav-cta">Open app</a>
+  </nav>
+</header>
 
   <!-- CTA desktop con stile del bottone hero -->
   <a href="app.html" class="btn btn-primary nav-cta">Open app</a>
